# property_pal

./: .gitignore  Cargo.toml  test.txt
migrations/: 0001_test.sql
property_pal_scrapy2/: Readme.txt.txt
property_pal_scrapy2/api/: db.sqlite3  run_spiders.py  run_spiders.spec  scrap.py  scrapy.cfg
property_pal_scrapy2/api/api/: settings.py  urls.py
property_pal_scrapy2/api/backend/: models.py  tests.py
property_pal_scrapy2/api/backend/migrations/: 0001_initial.py  0002_alter_keyfeature_unique_together.py  0003_alter_views_property_id.py  0004_remove_propertydata_key_features_and_more.py  0005_remove_property_scraped_before_and_more.py
property_pal_scrapy2/api/spiders/: items.py  middlewares.py  pipelines.py  settings.py
property_pal_scrapy2/api/spiders/spiders/: basespider.py  epc.py  property_pal.py  sitemap.py
src/: condition_functions.rs  main.rs  make_requests.rs  serializer_functions.rs  serializers.rs  sql_functions.rs  utils.rs
