[package]
name = "property_pal"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
futures = "0.3.30"
quick-xml = { version = "0.36.1", features = ["serialize"] }
reqwest = "0.12.5"
scraper = "0.19.1"
serde = { version = "1.0.204", features = ["derive"] } 
serde_json = "1.0.120"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1.39.0", features = ["full"] }
tokio-macros = "2.3.0"
